Work in progress towards a new container joining the network.