@@ -9,10 +9,10 @@ import org.texai.util.TexaiException;
 
 /**
  * AICoinUtils.java
-
- Description:
-
- Copyright (C) Nov 21, 2014, Stephen L. Reed, Texai.org.
+ *
+ * Description:
+ *
+ * Copyright (C) Nov 21, 2014, Stephen L. Reed, Texai.org.
  *
  * See the file "LICENSE" for the full license governing this code.
  */
@@ -41,24 +41,38 @@ public class AICoinUtils {
     }
 
     try {
-      final Process process = Runtime.getRuntime().exec(cmdArray);
-      final StreamConsumer errorConsumer = new StreamConsumer(process.getErrorStream(), LOGGER);
-      final StreamConsumer outputConsumer = new StreamConsumer(process.getInputStream(), LOGGER);
-      errorConsumer.setName("errorConsumer");
-      errorConsumer.start();
-      outputConsumer.setName("outputConsumer");
-      outputConsumer.start();
+      final ProcessBuilder processBuilder = new ProcessBuilder(cmdArray);
+      processBuilder.redirectOutput(ProcessBuilder.Redirect.INHERIT);
+      processBuilder.redirectError(ProcessBuilder.Redirect.INHERIT);
+      final Process process = processBuilder.start();
       int exitVal = process.waitFor();
       if (LOGGER.isDebugEnabled()) {
         LOGGER.debug("exitVal: " + exitVal);
       }
+    } catch (final IOException | InterruptedException ex) {
+      throw new TexaiException(ex);
+    }
+  }
 
-      process.getInputStream().close();
-      process.getOutputStream().close();
-    } catch (InterruptedException ex) {
-      if (LOGGER.isDebugEnabled()) {
-        LOGGER.debug("interrupted");
-      }
+  /**
+   * Executes a host command using the specified command strings, without waiting for the command to finish.
+   *
+   * @param cmdArray the specified command strings
+   *
+    */
+  public synchronized static void executeHostCommandWithoutWaitForCompletion(final String[] cmdArray) {
+    //Preconditions
+    assert cmdArray != null : "cmdArray must not be null";
+    assert cmdArray.length > 0 : "cmdArray must not be empty";
+    if (!EnvironmentUtils.isLinux()) {
+      throw new TexaiException("must be running on Linux");
+    }
+
+    try {
+      final ProcessBuilder processBuilder = new ProcessBuilder(cmdArray);
+      processBuilder.redirectOutput(ProcessBuilder.Redirect.INHERIT);
+      processBuilder.redirectError(ProcessBuilder.Redirect.INHERIT);
+      processBuilder.start();
     } catch (final IOException ex) {
       throw new TexaiException(ex);
     }
